--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Weather App</string>
+    <string name="city">St. Paul, MN</string>
+    <string name="temperature">72</string>
+    <string name="feels_like_temp">Feels like 78</string>
+    <string name="low_temp">Low 65</string>
+    <string name="high_temp">High 80</string>
+    <string name="humidity">Humidity 100%</string>
+    <string name="pressure">Pressure 1023 hPa</string>
 </resources>
